个人账户信息确认页面判断

--- a/kankan/pages/transaction/balance_management.html
+++ b/kankan/pages/transaction/balance_management.html
@@ -121,6 +121,9 @@
 		    	mui.openWindow({
 		    		url: "seller_account_confirm.html",
 					id: "seller_account_confirm",
+					extras:{
+						froms:"management"
+					}
 		    	});
 		    });
 		}
