--- a/kankan/pages/main/user/useredite.html
+++ b/kankan/pages/main/user/useredite.html
@@ -266,8 +266,8 @@
 		
 		function test() {
 			mui.openWindow({
-				url: '../../transaction/seller_account.html',
-				id: 'seller_account.html'
+				url: '../../transaction/checkvode.html',
+				id: 'checkvode'
 			});
 		}
 		//change head image
