账户信息编辑页面和确认页面改修

--- a/kankan/pages/transaction/seller_account.html
+++ b/kankan/pages/transaction/seller_account.html
@@ -22,7 +22,7 @@
 				<!--bank-->
 				<div class="seller_bank">
 					<div class="mui-pull-left lang" style="margin-left: 1em;" data-locale="bank"></div>
-					<div id="branchResults" class="mui-pull-right lang mui-col-xs-4" data-locale="selectbank" style="margin-right: 0.5em;"></div>
+					<div id="branchResults" class="mui-pull-right lang mui-col-xs-4" data-locale="selectbank" style="margin-right: 0.5em;font-size: 12px;"></div>
 					<input type="hidden" name="branch_id" id="branch_id" value="" />
 				</div>
 				<!--account type-->
