--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -75,7 +75,7 @@
 				var datalen=data.length;
 				for(var i=0;i<datalen;i++){
 					var trans=data[i].trans;
-					var price=trans.price;
+					var price=trans.price ? parseFloat(trans.price).toLocaleString() : '0';
 					var trans_id=trans.trans_id;
 					var trstatus=trans.status;
 					if(trstatus=="3"){
@@ -96,7 +96,7 @@
 					var comm_name=HTMLDecode(trans[0].comm_name);
 					var html = new Util.StringBuilder();
 					html.appendFormat('<li class="mui-row mui-table-view-cell transli" style="width:100%; height: 76px;"><a class="mui-navigate-right" id="{0}"><div class="mui-pull-left mui-col-xs-2"><img class="lazy" data-original="{1}" style="width: 60px;max-height: 60px;"></div>',trans_id,comm_img)
-						.appendFormat('<div style="text-overflow: ellipsis;overflow: hidden;" class="mui-pull-left mui-col-xs-4 requestbox">{0}<div style="text-align:left;"><font color="#0062CC">{1}P</font></div></div>',comm_name,price)
+						.appendFormat('<div style="text-overflow: ellipsis;overflow: hidden;" class="mui-pull-left mui-col-xs-4 requestbox">{0}<div style="text-align:left;"><font color="#0062CC">&yen;{1}</font></div></div>',comm_name,price)
 						.appendFormat('<div style="margin-left: 0.5rem;" class="mui-pull-left mui-col-xs-5 ka_userbox"><div class="{0}">{1}</div></div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
 					$("#historyUl").append(html.toString());
 					lazyload();
@@ -119,7 +119,7 @@
 				}
 				//价格是需要从后台拿到的，所以先保留
 				$("#total").append('<div class="mui-col-xs-6 mui-pull-left" style="display:flex; align-items: center; left: 1em; height: 60px;">共赚了</div>');
-				$("#total").append('<div class="mui-col-xs-6 mui-pull-left" style="display:flex; align-items: center; left: 1em; height: 60px;">&yen;<span>3,000,000</span>元</div>');
+				$("#total").append('<div class="mui-col-xs-6 mui-pull-left" style="display:flex; align-items: center; left: 1em; height: 60px;">&yen;<span id="totalMoney"></span>元</div>');
 			    $("#total").show();
 			}
 			function reloadpage(){
