--- a/kankan/pages/transaction/payment.html
+++ b/kankan/pages/transaction/payment.html
@@ -31,6 +31,9 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav input-top">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
+				<font size="3" class="lang" data-locale="back"></font>
+			</a>
 			<h1 class="mui-title"><span class="lang" data-locale="payment_procedures"></span></h1>
 		</header>
 		<div id="reloadpage" onclick="reloadpage()" style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
@@ -83,6 +86,7 @@
 			var imgContent;
 			var comm_price;
 			var user_balance;
+			var trans_id;
 			mui.init({
 				
 			});
@@ -156,8 +160,8 @@
 			var pay_way;
 			var params2;
 			function pay() {
-				var self = plus.webview.currentWebview();
-				trans_id = self.transid;
+				/*var self = plus.webview.currentWebview();
+				trans_id = self.transid;*/
 				if($(":radio:checked").attr("id")=="balance") {
 					pay_way = 0;
 					params2 = {
@@ -180,14 +184,30 @@
 					ok: function(data) {
 						console.log("success");
 						mui.openWindow({
-							url: "transaction2.html?transid=" + trans_id+"",
-							id: "transaction2.html"
-						});
+							url: "transaction2.html?transid="+ trans_id,
+							id: "transaction",
+							extras: {
+								"transid": trans_id
+							}
+				        })
 					},
 					ng: function(data) {
 						console.log("error:"+data);
-						alert(JSON.stringify(data));
-						Log.d(data);
+						switch(data) {
+							case "3030":
+								mui.toast(TextMessage.invalid_type, {
+									duration: 'long',
+									type: 'div'
+								})
+								break;
+							case "3031":
+								mui.toast(TextMessage.pay_error, {
+									duration: 'long',
+									type: 'div'
+								})
+								break;
+						}
+						
 					}
 				})
 			}
